--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="card">
-        <p id="text">Do you Love me?</p>
+        <p id="text">Mujhse Shadi Krogi?</p>
         <div class="ans">
             <button id="yes">Yes</button>
             <button id="no">No</button>
