--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="card">
         <p id="text">Mujhse Shadi Krogi?</p>
         <div class="ans">
-            <button id="yes">Yes</button>
-            <button id="no">No</button>
+            <button id="yes">Haan</button>
+            <button id="no">Nahi</button>
         </div>
 
         
