--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1 id="k">K</h1>
         <h1 id="u">U</h1>
     </div>
+    <h1 id="version">Version 1.0</h1>
 
 
     <script src="script.js"></script>
